# Edgar

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
skills/: INDEX.md  aggregate-by-the-real-key.md  be-a-good-citizen.md  cache-by-immutability.md  degrade-never-break.md  finish-autonomously.md  fixtures-copy-reality.md  never-guess-identifiers.md  no-keys-no-paywalls.md  one-view-layer.md  probe-before-building.md  read-the-briefing-first.md  sanity-check-magnitudes.md  scope-honestly.md  silent-failure-patterns.md  verify-live-before-done.md  write-the-handover.md
skills/universal/: INDEX.md  cache-by-immutability.md  debug-silent-failures.md  finish-autonomously.md  fixtures-copy-reality.md  gate-your-dependencies.md  keep-a-handover-log.md  know-your-keys.md  never-guess-identifiers.md  probe-before-building.md  read-the-briefing-first.md  respect-rate-limits.md  sanity-check-numbers.md  scope-honestly.md  single-source-view-layer.md  tiered-reliability.md  verify-in-reality.md
src/edgar/: cli.py  mcp_server.py
src/edgar13f/: __init__.py  cli.py  client.py  consensus.py  (+7 more)
tests/: test_cache.py  test_client.py  test_consensus.py  test_crypto.py  test_dashboard.py  test_diff.py  test_events.py  test_form4.py  test_fulltext.py  test_fundamentals.py  test_fx.py  test_indicators.py  test_macro.py  test_market.py  test_news.py  test_nport.py  test_options.py  test_regulatory.py  test_risk.py  test_screener.py  test_smoke.py  test_tickers.py  test_yahoo_auth.py
(+38 files in other folders)
