[project]
name = "howlet"
version = "0.8.0"
description = "Free, no-API-key Python client + CLI + Bloomberg-style terminal for SEC EDGAR data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vineeth" }]
dependencies = [
    "requests>=2.31",
    "lxml>=5.0",
    "click>=8.1",
    "rich>=13.0",
    "flask>=3.0",
]

[project.urls]
Homepage = "https://github.com/mvineethr/Howlet"
Repository = "https://github.com/mvineethr/Howlet"
Changelog = "https://github.com/mvineethr/Howlet/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "ruff>=0.4",
]
mcp = [
    "mcp>=1.2",
]

[project.scripts]
howlet = "howlet.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
howlet = ["dashboard.html", "static/*"]
